crates/test-files/fixtures/compile_errors/bad_string.fe
contract foo {
    pub fn bar(self) {
        let s: String<1> = "Fe"
    }
}
